--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     -->
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <!-- 
+    Add style.css to the head tag
+  -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
 	<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -20,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-	<title>React App</title>
+	<title>Audio Sample Generator</title>
 </head>
 
 <body>
